# customhf

./: .gitignore  README.md  logging.ini  pyproject.toml
src/customhf/: __init__.py  bigram_model.py  data.py  generate.py  gpt2_model.py  model.py  train.py
test/: test_bigram_model.py  test_data.py  test_model.py
