[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "customhf"
version="0.0.1"
authors = [
   { name="Brian Walshe", email="walshe.brian@gmail.com" }
]
description = "An example of creating a custom Hugging Face model, based off Andrej Karpathy's GPT-2 Tutorial"
dependencies = [
   "torch",
   "transformers[torch]",
   "datasets"
]

[project.scripts]
train-bigram = "customhf.train:main"
generate-text = "customhf.generate:main"
