[build-system]
requires = [
   "hatchling"
]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
   "pytest>=8.3.5", 
   "pytest-mock>=3.14.1",
]

[project]
name = "customhf"
version="0.0.1"
authors = [
   { name="Brian Walshe", email="walshe.brian@gmail.com" }
]
description = "An example of creating a custom Hugging Face model, based off Andrej Karpathy's GPT-2 Tutorial"
requires-python = ">=3.11"
dependencies = [
   "torch",
   "transformers[torch]",
   "datasets"
]

[project.scripts]
train-model = "customhf.train:main"
generate-text = "customhf.generate:main"
